--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -1,9 +1,16 @@
 name: bonjour
 on: [push]
+
+
 jobs:
   dire_bonjour:
     runs-on: ubuntu-20.04
     steps:
     - run: echo "Bonjour !"
     - run: ls -l
+    - uses: actions/checkout@v2
+      with:
+        # Repository name with owner. For example, actions/checkout
+        # Default: ${{ github.repository }}
+        repository: 'https://github.com/pfabre31/cicd-exercice.git'
     - run: cat README.md
