--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -12,5 +12,5 @@ jobs:
       with:
         # Repository name with owner. For example, actions/checkout
         # Default: ${{ github.repository }}
-        repository: 'pfabre31.cicd-exercice'
+        repository: '{pfabre31}/{cicd-exercice}'
     - run: cat README.md
