--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -9,4 +9,5 @@ jobs:
     - run: echo "Bonjour !"
     - run: ls -l
     - uses: actions/checkout@v2
+    - run: sudo apt --assume-yes install cowsay
     - run: cat README.md | cowsay
