--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -17,6 +17,6 @@ jobs:
       env:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID}}
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN}}
-      run : netlify deploy --prod --dir=./dist/
+      # run : netlify deploy --prod --dir=./dist/
       
 
