--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Publish
       uses : netlify/actions/cli@master
       with:
-        args: deploy --dir=site --functions=functions
+        args: deploy --dir=./dist/ --functions=functions
       env:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID}}
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN}}
