--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -6,14 +6,14 @@ jobs:
   dire_bonjour:
     runs-on: ubuntu-20.04
     steps:
-    - run: echo "Bonjour !"
-    - run: ls -l
+    - run: sudo apt --assume-yes install asciidoctor
+    - run: make all
     - uses: actions/checkout@v2
 
     - name: Publish
       uses : netlify/actions/cli@master
       with:
-        args: deploy --dir=./dist/ --functions=functions
+        args: deploy --prod --dir=./dist/ --functions=functions
       env:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID}}
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN}}
