--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -1,15 +1,13 @@
-name: bonjour
+name: publishNetlify
 on: [push]
-
-
 jobs:
-  dire_bonjour:
+  publish:
     runs-on: ubuntu-20.04
     steps:
-    - run: sudo apt --assume-yes install asciidoctor
-    - run: make all
-    - uses: actions/checkout@v2
-
+    - uses: actions/checkout@master
+    - run : sudo apt-get --assume-yes install asciidoctor 
+    - run : make all
+    - uses: actions/checkout@master
     - name: Publish
       uses : netlify/actions/cli@master
       with:
@@ -17,6 +15,3 @@ jobs:
       env:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID}}
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN}}
-      # run : netlify deploy --prod --dir=./dist/
-      
-
