--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Publish
       uses : netlify/actions/cli@master
       with:
-        args: deploy --prod --dir=./dist/ --functions=functions
+        args: deploy --prod --dir=./test/ --functions=functions
       env:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID}}
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN}}
